--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link type="image/png" sizes="16x16" rel="icon" href="./icons8-calculator-16.png">
 		<link rel="stylesheet" href="./style.css">
 		<script src="./main.js"></script>
 		<title>Calculator</title>
@@ -19,27 +20,27 @@
 				<button class="delete">DELETE</button>
 			</div>
 			<div class="buttons">
-				<div class="row1">
-					<button class="btn-7" class="number">7</button>
-					<button class="btn-8" class="number">8</button>
-					<button class="btn-9" class="number">9</button>
+				<div class="row">
+					<button class="btn-7 number">7</button>
+					<button class="btn-8 number">8</button>
+					<button class="btn-9 number">9</button>
 					<button class="btn-divide">&divide;</button>
 				</div>
-				<div class="row2">
-					<button class="btn-4" class="number">4</button>
-					<button class="btn-5" class="number">5</button>
-					<button class="btn-6" class="number">6</button>
+				<div class="row">
+					<button class="btn-4 number">4</button>
+					<button class="btn-5 number">5</button>
+					<button class="btn-6 number">6</button>
 					<button class="btn-multiply">&times;</button>
 				</div>
-				<div class="row3">
-					<button class="btn-1" class="number">1</button>
-					<button class="btn-2" class="number">2</button>
-					<button class="btn-3" class="number">3</button>
+				<div class="row">
+					<button class="btn-1 number">1</button>
+					<button class="btn-2 number">2</button>
+					<button class="btn-3 number">3</button>
 					<button class="btn-subtract">&minus;</button>
 				</div>
-				<div class="row4">
+				<div class="row">
 					<button class="btn-point">&sdot;</button>
-					<button class="btn-0" class="number">0</button>
+					<button class="btn-0 number">0</button>
 					<button class="btn-equal">&equals;</button>
 					<button class="btn-add">&plus;</button>
 				</div>
