Create Shows Its argument in calculator's screen.
* Add "defer" to script tag in HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			href="./icons8-calculator-16.png"
 		/>
 		<link rel="stylesheet" href="./style.css" />
-		<script src="./main.js"></script>
+		<script src="./main.js" defer></script>
 		<title>Calculator</title>
 	</head>
 	<body>
