Add id attribute to button tags
every id will have a meaningful  value of its button.
Those values will help when programming by JS.

--- a/index.html
+++ b/index.html
@@ -21,33 +21,33 @@
 				<span class="result"></span>
 			</div>
 			<div class="clear-delete">
-				<button class="clear">CLEAR</button>
-				<button class="delete">DELETE</button>
+				<button class="clear" id="CLEAR">CLEAR</button>
+				<button class="delete" id="DELETE">DELETE</button>
 			</div>
 			<div class="buttons">
 				<div class="row">
-					<button class="btn-7 number">7</button>
-					<button class="btn-8 number">8</button>
-					<button class="btn-9 number">9</button>
-					<button class="btn-divide">&divide;</button>
+					<button class="btn-7 number" id="7">7</button>
+					<button class="btn-8 number" id="8">8</button>
+					<button class="btn-9 number" id="9">9</button>
+					<button class="btn-divide" id="divide">&divide;</button>
 				</div>
 				<div class="row">
-					<button class="btn-4 number">4</button>
-					<button class="btn-5 number">5</button>
-					<button class="btn-6 number">6</button>
-					<button class="btn-multiply">&times;</button>
+					<button class="btn-4 number" id="4">4</button>
+					<button class="btn-5 number" id="5">5</button>
+					<button class="btn-6 number" id="6">6</button>
+					<button class="btn-multiply" id="multiply">&times;</button>
 				</div>
 				<div class="row">
-					<button class="btn-1 number">1</button>
-					<button class="btn-2 number">2</button>
-					<button class="btn-3 number">3</button>
-					<button class="btn-subtract">&minus;</button>
+					<button class="btn-1 number" id="1">1</button>
+					<button class="btn-2 number" id="2">2</button>
+					<button class="btn-3 number" id="3">3</button>
+					<button class="btn-subtract" id="subtract">&minus;</button>
 				</div>
 				<div class="row">
-					<button class="btn-point">&sdot;</button>
-					<button class="btn-0 number">0</button>
-					<button class="btn-equal">&equals;</button>
-					<button class="btn-add">&plus;</button>
+					<button class="btn-point" id=".">&sdot;</button>
+					<button class="btn-0 number" id="0">0</button>
+					<button class="btn-equal" id="equal">&equals;</button>
+					<button class="btn-add" id="add">&plus;</button>
 				</div>
 			</div>
 		</div>
